2009-12-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConfig.c:	Added another dimension of refCounting to the
	* generic/tkInt.c:	"option" Tcl_ObjType to improve memory troubles
	* generic/tkObj.c:	detailed in [Bug 2492179].  Also removed
	registration of the "option" Tcl_ObjType.
	*** POTENTIAL INCOMPATIBILITY *** for callers of
	Tcl_GetObjType("option") which must now handle a NULL return.

2009-12-15  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/unicodeout.tcl (usePresentationFormsFor): Split out
	the code to decide whether to use presentation forms for clarity, and
	add some more languages (though only in natural uncomposed form for
	Devanagari script).

2009-12-14  Kevin B. Kenny  <kennykb@acm.org>

	* library/demos/unicodeout.tcl: Added code to check for right-to-left
	support on Windows and adjust Hebrew and Arabic character strings
	accordingly. Changed the Hebrew string to 'ktb ebryt' (ktav Ivrit,
	"Hebrew writing") to be consistent with at least the Greek and Russian
	strings. Thanks to Rodrigo Readi for calling the inconsistency to our
	attention.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkInt.decls: [Bugs 220600, 220690]: Comment that TkWinChildProc
	is exported through the stubs table since 8.5.9

2009-12-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc:	Fix dependancies on ${TKSTUBLIB} when
				TCL_USE_STATIC_PACKAGES is defined
	* generic/tkWindow.c:	Fix gcc warning, using gcc-4.3.4 on cygwin
				warning: array subscript has type 'char'

2009-12-11  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl (::tk::ScreenChanged): [Bug 2912473]: Stop problems
	caused by display names with a double colon in.

2009-12-10  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/ttkscale.tcl: Added demo of [ttk::scale] widget.

2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkColor.c (Tk_GetColorByValue): [Bug 2911570]: Ensure that